install_data(
  join_paths('scalable', ('@0@.svg').format(application_id)),
  install_dir: join_paths(totem_datadir, 'icons', 'hicolor', 'scalable', 'apps')
)

install_data(
  join_paths('symbolic', 'org.gnome.Totem-symbolic.svg'),
  install_dir: join_paths(totem_datadir, 'icons', 'hicolor', 'symbolic', 'apps')
)
