install_data(
  join_paths('scalable', application_id + '.svg'),
  install_dir: join_paths(totem_datadir, 'icons', 'hicolor', 'scalable', 'apps')
)

install_data(
  join_paths('symbolic', 'org.gnome.Totem-symbolic.svg'),
  rename : [application_id + '-symbolic.svg'],
  install_dir: join_paths(totem_datadir, 'icons', 'hicolor', 'symbolic', 'apps')
)

install_data(
  join_paths('symbolic', 'tv-symbolic.svg'),
  rename : ['totem-tv-symbolic.svg'],
  install_dir: join_paths(totem_datadir, 'icons', 'hicolor', 'symbolic', 'apps')
)

install_data(
  join_paths('symbolic', 'playback-options-symbolic.svg'),
  rename: ['totem-playback-options-symbolic.svg'],
  install_dir: join_paths(totem_datadir, 'icons', 'hicolor', 'symbolic', 'apps')
)
